--- a/index.html
+++ b/index.html
@@ -52,23 +52,22 @@
           <div class="collapse navbar-collapse"
                id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item active">
+
+              <li class="nav-item"
+                  :class="{active:('main'===values.selected)}">
                 <a class="nav-link"
-                   href="#">Home
-                <span class="sr-only">(current)</span>
-              </a>
+                   @click="values.selected='main'">
+                   {{ view.home }}
+                </a>
               </li>
-              <li class="nav-item">
+
+              <li class="nav-item"
+                  :class="{active:(article === values.selected)}"
+                  v-for="article of values.articles">
                 <a class="nav-link"
-                   href="#">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link"
-                   href="#">Services</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link"
-                   href="#">Contact</a>
+                   @click="values.selected=article">
+                  {{article.action}}
+                </a>
               </li>
             </ul>
           </div>
@@ -160,7 +159,8 @@
           <div class="col-md-4">
 
             <!-- Search Widget -->
-            <div class="card my-4">
+            <div class="card my-4"
+                 v-if="'main' === values.selected">
               <h5 class="card-header"
                   v-text="view.search"></h5>
               <div class="card-body">
@@ -175,7 +175,7 @@
               </div>
             </div>
 
-            <!-- Categories Widget -->
+            <!-- Categories Widget
             <div class="card my-4">
               <h5 class="card-header">Categories</h5>
               <div class="card-body">
@@ -209,8 +209,9 @@
                 </div>
               </div>
             </div>
+          -->
 
-            <!-- Side Widget -->
+            <!-- Side Widget
             <div class="card my-4">
               <h5 class="card-header">Side Widget</h5>
               <div class="card-body">
@@ -219,30 +220,31 @@
             </div>
 
           </div>
+        -->
 
-        </div>
-        <!-- /.row -->
+          </div>
+          <!-- /.row -->
 
-      </div>
-      <!-- /.container -->
-
-      <!-- Footer -->
-      <footer class="py-5 bg-dark">
-        <div class="container">
-          <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
         </div>
         <!-- /.container -->
-      </footer>
 
-    </div>
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+        <!-- Footer -->
+        <footer class="py-5 bg-dark">
+          <div class="container">
+            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
+          </div>
+          <!-- /.container -->
+        </footer>
+
+      </div>
+      <!-- Bootstrap core JavaScript -->
+      <script src="vendor/jquery/jquery.min.js"></script>
+      <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 
 
-    <script src="./scripts/vue-manager.js"
-            charset="utf-8"></script>
+      <script src="./scripts/vue-manager.js"
+              charset="utf-8"></script>
 
   </body>
 
