ajout des images

--- a/index.html
+++ b/index.html
@@ -90,15 +90,18 @@
 
             <!-- Blog Post -->
             <div class="card mb-4"
-                 v-for="article of values.articles">
+                 v-for="article of articleFilter">
+              <!-- v-for="article of values.articles"> -->
               <img class="card-img-top"
                    :src="article.image"
                    alt="Card image cap">
               <div class="card-body">
+                <p class="card-text text-right"
+                   v-html="article.imageBadge"></p>
                 <h2 class="card-title"
                     v-text="article.headline"></h2>
                 <p class="card-text"
-                   v-text="article.articleBody.substring(0, 300)+'...'"></p>
+                   v-text="article.articleBodySanitized.substring(0, 300)+'...'"></p>
                 <a href="#"
                    class="btn btn-primary"
                    @click="values.selected = article"
@@ -110,19 +113,6 @@
                    v-text="article.author"></a>
               </div>
             </div>
-
-            <!-- Pagination
-            <ul class="pagination justify-content-center mb-4">
-              <li class="page-item">
-                <a class="page-link"
-                   href="#">&larr; Older</a>
-              </li>
-              <li class="page-item disabled">
-                <a class="page-link"
-                   href="#">Newer &rarr;</a>
-              </li>
-            </ul>
-          -->
 
           </div>
 
@@ -136,12 +126,14 @@
                    :src="values.selected.image"
                    alt="Card image cap">
               <div class="card-body">
+                <p class="card-text text-right"
+                   v-html="values.selected.imageBadge"></p>
                 <h2 class="card-title"
                     v-text="values.selected.headline"></h2>
                 <h3 class="card-title"
                     v-text="values.selected.alternativeHeadline"></h3>
                 <p class="card-text"
-                   v-text="values.selected.articleBody"></p>
+                   v-html="values.selected.articleBody"></p>
                 <a href="#"
                    class="btn btn-primary"
                    @click="values.selected = 'main'"
@@ -167,60 +159,13 @@
                 <div class="input-group">
                   <input type="text"
                          class="form-control"
-                         :placeholder="view.searchPlaceholder">
+                         :placeholder="view.searchPlaceholder"
+                         v-model="values.search">
                   <span class="input-group-btn">
-                  <!-- <button class="btn btn-secondary" type="button">Go!</button> -->
                 </span>
                 </div>
               </div>
             </div>
-
-            <!-- Categories Widget
-            <div class="card my-4">
-              <h5 class="card-header">Categories</h5>
-              <div class="card-body">
-                <div class="row">
-                  <div class="col-lg-6">
-                    <ul class="list-unstyled mb-0">
-                      <li>
-                        <a href="#">Web Design</a>
-                      </li>
-                      <li>
-                        <a href="#">HTML</a>
-                      </li>
-                      <li>
-                        <a href="#">Freebies</a>
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="col-lg-6">
-                    <ul class="list-unstyled mb-0">
-                      <li>
-                        <a href="#">JavaScript</a>
-                      </li>
-                      <li>
-                        <a href="#">CSS</a>
-                      </li>
-                      <li>
-                        <a href="#">Tutorials</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
-          -->
-
-            <!-- Side Widget
-            <div class="card my-4">
-              <h5 class="card-header">Side Widget</h5>
-              <div class="card-body">
-                You can put anything you want inside of these side widgets. They are easy to use, and feature the new Bootstrap 4 card containers!
-              </div>
-            </div>
-
-          </div>
-        -->
 
           </div>
           <!-- /.row -->
@@ -231,7 +176,7 @@
         <!-- Footer -->
         <footer class="py-5 bg-dark">
           <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
+            <p class="m-0 text-center text-white">Copyright &copy; Jean-Claude Audouin 2018</p>
           </div>
           <!-- /.container -->
         </footer>
