--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author"
           content="">
 
-    <title>Blog Home - Start Bootstrap Template</title>
+    <title>Jean-Claude Audouin</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css"
@@ -28,10 +28,10 @@
 
   <body>
 
-    <div id="application">
-
+    <div id="application"
+         class="bg-dark">
       <!-- Navigation -->
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top border-bottom border-secondary shadow-lg">
         <div class="container">
 
           <!-- TITRE DE LA PAGE -->
@@ -75,7 +75,8 @@
       </nav>
 
       <!-- Page Content -->
-      <div class="container">
+      <div id="articleContainer"
+           class="container bg-light shadow-lg">
 
         <div class="row">
 
@@ -117,11 +118,11 @@
           </div>
 
           <!-- Article detail -->
-          <div class="col-md-8"
+          <div class="col-md-12"
                v-else>
 
             <!-- Blog Post -->
-            <div class="card mb-4">
+            <div class="card mb-4 ">
               <img class="card-img-top"
                    :src="values.selected.image"
                    alt="Card image cap">
@@ -148,14 +149,41 @@
           </div>
 
           <!-- Sidebar Widgets Column -->
-          <div class="col-md-4">
+          <div class="col-md-4"
+               v-if="'main' === values.selected">
 
             <!-- Search Widget -->
-            <div class="card my-4"
-                 v-if="'main' === values.selected">
-              <h5 class="card-header"
-                  v-text="view.search"></h5>
+            <div class="card my-4 position-fixed">
+
               <div class="card-body">
+
+                <ul class="navbar-nav ml-auto">
+
+                  <li class="nav-item"
+                      :class="{active:('main'===values.selected)}">
+                    <a class="nav-link"
+                       @click="values.selected='main'"
+                       v-text="view.home"
+                       style="cursor:pointer"
+                       :style="{fontWeight: ('main' === values.selected)? 'bold': ''}"></a>
+                  </li>
+
+                  <li class="nav-item"
+                      :class="{active:(article === values.selected)}"
+                      v-for="article of values.articles">
+                    <a class="nav-link"
+                       @click="values.selected=article"
+                       v-text="article.action"
+                       style="cursor:pointer"
+                       :style="{fontWeight: (article === values.selected)? 'bold': ''}"></a>
+                  </li>
+                </ul>
+                <!--  -->
+
+
+              </div>
+              <div class="card-body"
+                   v-if="'main' === values.selected">
                 <div class="input-group">
                   <input type="text"
                          class="form-control"
@@ -174,7 +202,7 @@
         <!-- /.container -->
 
         <!-- Footer -->
-        <footer class="py-5 bg-dark">
+        <footer class="py-5 bg-dark rounded">
           <div class="container">
             <p class="m-0 text-center text-white">Copyright &copy; Jean-Claude Audouin 2018</p>
           </div>
