--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
   <head>
-
     <meta charset="utf-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,36 +9,28 @@
           content="">
     <meta name="author"
           content="">
-
     <title>Jean-Claude Audouin</title>
-
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css"
           rel="stylesheet">
-
     <!-- Custom styles for this template -->
     <link href="css/blog-home.css"
           rel="stylesheet">
-
     <!-- Make some magic -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.1.3/vue.min.js"></script>
-
   </head>
 
   <body>
-
     <div id="application"
          class="bg-dark">
       <!-- Navigation -->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top border-bottom border-secondary shadow-lg">
         <div class="container">
-
-          <!-- TITRE DE LA PAGE -->
+          <!-- Titre de la page -->
           <a class="navbar-brand"
              href="#"
              v-text="view.title"
              @click="values.selected='main'"></a>
-
           <button class="navbar-toggler"
                   type="button"
                   data-toggle="collapse"
@@ -47,52 +38,40 @@
                   aria-controls="navbarResponsive"
                   aria-expanded="false"
                   aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+            <span class="navbar-toggler-icon"></span>
+          </button>
           <div class="collapse navbar-collapse"
                id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-
               <li class="nav-item"
                   :class="{active:('main'===values.selected)}">
                 <a class="nav-link"
-                   @click="values.selected='main'">
-                   {{ view.home }}
-                </a>
+                   @click="values.selected='main'"> {{ view.home }} </a>
               </li>
-
               <li class="nav-item"
                   :class="{active:(article === values.selected)}"
                   v-for="article of values.articles">
                 <a class="nav-link"
-                   @click="values.selected=article">
-                  {{article.action}}
-                </a>
+                   @click="values.selected=article"> {{article.action}} </a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
-
       <!-- Page Content -->
       <div id="articleContainer"
            class="container bg-light shadow-lg">
-
         <div class="row">
-
           <!-- Blog Entries Column -->
           <div class="col-md-8"
                v-if="'main' === values.selected">
-
-            <!-- EN-TETE DE LA PAGE -->
-            <h1 class="my-4"> {{view.heading}}
+            <!-- En-tête de la page -->
+            <h1 class="my-4"> {{ view.heading }}
               <small v-text="view.subHeading"></small>
             </h1>
-
             <!-- Blog Post -->
             <div class="card mb-4"
                  v-for="article of articleFilter">
-              <!-- v-for="article of values.articles"> -->
               <img class="card-img-top"
                    :src="article.image"
                    alt="Card image cap">
@@ -108,19 +87,15 @@
                    @click="values.selected = article"
                    v-text="view.readMore"></a>
               </div>
-              <div class="card-footer text-muted">
-                Posted on {{article.datePublished}} by
+              <div class="card-footer text-muted"> Posted on {{article.datePublished}} by
                 <a href="#"
                    v-text="article.author"></a>
               </div>
             </div>
-
           </div>
-
           <!-- Article detail -->
           <div class="col-md-12"
                v-else>
-
             <!-- Blog Post -->
             <div class="card mb-4 ">
               <img class="card-img-top"
@@ -140,25 +115,19 @@
                    @click="values.selected = 'main'"
                    v-text="view.home">&rarr;</a>
               </div>
-              <div class="card-footer text-muted">
-                Posted on {{values.selected.datePublished}} by
+              <div class="card-footer text-muted"> Posted on {{values.selected.datePublished}} by
                 <a href="#"
                    v-text="values.selected.author"></a>
               </div>
             </div>
           </div>
-
           <!-- Sidebar Widgets Column -->
           <div class="col-md-4"
                v-if="'main' === values.selected">
-
             <!-- Search Widget -->
             <div class="card my-4 position-fixed">
-
               <div class="card-body">
-
                 <ul class="navbar-nav ml-auto">
-
                   <li class="nav-item"
                       :class="{active:('main'===values.selected)}">
                     <a class="nav-link"
@@ -167,7 +136,6 @@
                        style="cursor:pointer"
                        :style="{fontWeight: ('main' === values.selected)? 'bold': ''}"></a>
                   </li>
-
                   <li class="nav-item"
                       :class="{active:(article === values.selected)}"
                       v-for="article of values.articles">
@@ -179,8 +147,6 @@
                   </li>
                 </ul>
                 <!--  -->
-
-
               </div>
               <div class="card-body"
                    v-if="'main' === values.selected">
@@ -189,36 +155,21 @@
                          class="form-control"
                          :placeholder="view.searchPlaceholder"
                          v-model="values.search">
-                  <span class="input-group-btn">
-                </span>
+                  <span class="input-group-btn"> </span>
                 </div>
               </div>
             </div>
-
           </div>
-          <!-- /.row -->
-
         </div>
-        <!-- /.container -->
-
-        <!-- Footer -->
-        <footer class="py-5 bg-dark rounded">
-          <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; Jean-Claude Audouin 2018</p>
-          </div>
-          <!-- /.container -->
-        </footer>
-
+        <nav class="bg-dark fixed-bottom border-top border-secondary shadow-lg">
+          <p class="m-0 mr-5 text-right text-white">Copyright &copy; Jean-Claude Audouin 2018</p>
+        </nav>
       </div>
       <!-- Bootstrap core JavaScript -->
       <script src="vendor/jquery/jquery.min.js"></script>
       <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-
-
       <script src="./scripts/vue-manager.js"
               charset="utf-8"></script>
-
   </body>
 
 </html>
