--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
   </head>
 
   <body>
+    <!-- APPLICATION -->
     <div id="application"
-         class="bg-dark">
+         style="background:url('./pics/wooden-bg.svg'); background-color: #220606">
       <!-- NAVIGATION -->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top border-bottom border-secondary shadow-lg">
         <div class="container">
