ajout de la photo de profil

--- a/index.html
+++ b/index.html
@@ -131,6 +131,14 @@
             <!-- SIDEBAR -->
             <div class="col-md-4 border-left border-muted">
               <ul class="navbar-nav m-5 position-fixed">
+                <li>
+                  <p class="text-center rounded bg-white m-5 border border-muted">
+                    <img src="./pics/profil.jpg"
+                         class="m-3 rounded border border-secondary shadow"
+                         width="150"
+                         height="152"
+                         alt=""> </p>
+                </li>
                 <li :class="{ active: ( isHomeTab ) }"
                     class="nav-item">
                   <a @click="goto('main')"
