--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
           rel="stylesheet">
     <!-- Make some magic -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.1.3/vue.min.js"></script>
+    <script src="./scripts/data.js"
+            charset="utf-8"></script>
   </head>
 
   <body>
     <!-- APPLICATION -->
     <div id="application"
          style="background:url('./pics/wooden-bg.svg'); background-color: #2C1511">
-      <!-- NAVIGATION -->
+      <!-- NAVIGATION @auto-fold here -->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top border-bottom border-secondary shadow-lg">
         <div class="container">
           <a class="navbar-brand text-white"
@@ -62,12 +64,13 @@
           </div>
         </div>
       </nav>
+      <!-- /NAVIGATION -->
       <!-- MAIN CONTAINER -->
       <div id="articleContainer"
            class="container bg-light shadow-lg">
         <div class="row">
           <template v-if="isHomeTab">
-            <!-- HOME -->
+            <!-- HOME @auto-fold here -->
             <div v-if="!isEmpty"
                  class="col-md-8 bg-white mt-3">
               <div class="card mb-5"
@@ -75,16 +78,14 @@
                 <img class="card-img-top"
                      :src="article.image"
                      alt="Card image cap">
-                <div class="card-img-overlay">
+                <div class="card-body">
                   <p class="card-text text-right"
                      v-html="article.imageBadge"></p>
-                </div>
-                <div class="card-body">
                   <h2 class="card-title"
                       v-text="article.headline"></h2>
                   <p class="card-text"
                      v-text="article.articleBodySanitized.substring(0, 300)+'...'"></p>
-                  <a class="btn btn-primary"
+                  <a class="btn btn-primary text-white"
                      @click="goto(article)"
                      v-text="view.readMore"></a>
                 </div>
@@ -94,14 +95,14 @@
               </div>
             </div>
             <!-- /HOME -->
-            <!-- ERROR -->
+            <!-- ERROR @auto-fold here -->
             <div v-if="isEmpty"
                  class="col-md-8 bg-danger">
               <div class="card mb-5 mt-2">
                 <img class="card-img-top"
                      src="./pics/error.jpg"
                      alt="Card image cap">
-                <div class="card-img-overlay">
+                <div class="card-body">
                   <p class="card-text text-right">
                     <a style="background-color:black;color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px;"
                   
@@ -120,8 +121,6 @@
                       <span style="display:inline-block;padding:2px 3px;">Braydon Anderson</span>
                     </a>
                   </p>
-                </div>
-                <div class="card-body">
                   <h2 class="card-title text-danger"> Oups! </h2>
                   <p class="card-text"> Aucun article n'est actuellement disponible.</p>
                   <hr>
@@ -132,17 +131,15 @@
               </div>
             </div>
             <!-- /ERROR -->
-            <!-- SIDEBAR -->
-            <div class="col-md-4 border-left border-muted">
-              <ul class="navbar-nav m-5 position-fixed">
+            <!-- SIDEBAR @auto-fold here -->
+            <div class="col-md-4 border-left border-muted bg-light">
+              <ul class="navbar-nav m-1 position-fixed">
                 <li>
-                  <p class="text-center rounded bg-white m-5 border border-muted">
-                    <img src="./pics/profil.jpg"
-                         class="m-3 rounded border border-secondary shadow"
-                         width="150"
-                         height="152"
-                         alt=""> </p>
-                </li>
+                  <img src="./pics/profil.jpg"
+                       class="m-5 rounded border border-secondary shadow"
+                       width="120"
+                       height="120"
+                       alt=""> </li>
                 <li :class="{ active: ( isHomeTab ) }"
                     class="nav-item">
                   <a @click="goto('main')"
@@ -155,7 +152,8 @@
                     class="nav-item"
                     :class="{ active: ( article === values.selected ) }">
                   <a @click="goto(article)"
-                     class="nav-link"
+                     href="#"
+                     class="nav-link text-secondary"
                      v-text="article.action"
                      style="cursor:pointer"
                      :style="{ fontWeight: ( article === values.selected ) ? 'bold': '' }"></a>
@@ -174,25 +172,23 @@
             </div>
             <!-- /SIDEBAR -->
           </template>
-          <!-- ARTICLE DETAIL -->
+          <!-- ARTICLE DETAIL @auto-fold here -->
           <div v-else
                class="col-md-12">
             <div class="card mb-5 mt-3">
               <img class="card-img-top"
                    :src="values.selected.image"
                    alt="values.selected.action">
-              <div class="card-img-overlay">
+              <div class="card-body">
                 <p class="card-text text-right"
                    v-html="values.selected.imageBadge"></p>
-              </div>
-              <div class="card-body">
                 <h2 class="card-title"
                     v-text="values.selected.headline"></h2>
                 <h3 class="card-title"
                     v-text="values.selected.alternativeHeadline"></h3>
                 <p class="card-text"
                    v-html="values.selected.articleBody"></p>
-                <a class="btn btn-primary"
+                <a class="btn btn-primary text-white"
                    @click="goto('main')"
                    v-text="view.home"></a>
               </div>
@@ -203,12 +199,14 @@
           </div>
           <!-- /ARTICLE DETAIL -->
         </div>
-        <!-- FOOTER -->
-        <nav class="bg-dark fixed-bottom border-top border-secondary shadow-lg">
-          <p class="m-0 mr-5 text-right text-white"
-             v-text="view.copyright"></p>
-        </nav>
       </div>
+      <!-- /MAIN CONTAINER -->
+      <!-- FOOTER @auto-fold here -->
+      <nav class="bg-dark fixed-bottom border-top border-secondary shadow-lg">
+        <p class="m-0 mr-5 text-right text-white"
+           v-text="view.copyright"></p>
+      </nav>
+      <!-- /FOOTER -->
       <script src="vendor/jquery/jquery.min.js"></script>
       <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
       <script src="./scripts/vue-manager.js"
